--- a/index.html
+++ b/index.html
@@ -494,6 +494,16 @@
                                     data-validation-required-message="Please enter your message"></textarea>
                                 <p class="help-block text-danger"></p>
                             </div>
+                            <div class="control-group">
+                                <div class="elem-group">
+                                    <label for="captcha" class="">Please Enter the Captcha Text</label>
+                                    <img src="/PHP/Capatcha.php" alt="CAPTCHA" class="captcha-image"><i class="fas fa-redo refresh-captcha"></i>
+                                    <br>
+                                    <input type="text" id="captcha" name="captcha_challenge" pattern="[A-Z]{6}">
+                                    <br>
+                                    <br>
+                                </div>
+                            </div>
                             <div>
                                 <button class="btn btn-outline-primary" type="submit" id="sendMessageButton">Send
                                     Message</button>
